# Nosal_Surgery_ChatBot

./: scraping.py
.devcontainer/: devcontainer.json
nosal-surgery-ai-chatbot/: .gitignore  API_KEY_SETUP.md  DEPLOYMENT.md  README.md  app.py  index.html  meko_clinic_rhinoplasty.html  packages.txt  pyproject.toml  requirements.txt  setup.py  test_features.py  test_file_loading.py  test_secrets.py
