[project]
name = "nosal-surgery-ai-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Danish Mustafa",email = "danishjajja86@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "openai (>=1.95.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "langdetect (>=1.0.9,<2.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)",
    "audio-recorder-streamlit (>=0.0.10,<0.0.11)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "gtts (>=2.5.4,<3.0.0)",
    "speechrecognition (>=3.14.3,<4.0.0)",
    "pyaudio (>=0.2.14,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
